--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div id="board">
-        <div id="player-adrian" class="player top"></div>
-        <div id="player-cristian" class="player left"></div>
+        <div id="player-3" class="player top"></div>
+        <div id="player-2" class="player left"></div>
         <div id="center">
           <div id="deck"></div>
           <div id="pile"></div>
         </div>
-        <div id="player-rossana" class="player right"></div>
-        <div id="player-stephanie" class="player bottom"></div>
+        <div id="player-4" class="player right"></div>
+        <div id="player-1" class="player bottom"></div>
       </div>
   <script src="main.js"></script>
 </body>
