--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="scoreboard" style="position: absolute; top: 10px; left: 10px; background: rgba(255,255,255,0.85); padding: 8px 16px; border-radius: 8px; font-weight: bold; z-index: 10; min-width: 180px;"></div>
     <div id="board">
         <div id="player-3" class="player top"></div>
         <div id="player-2" class="player left"></div>
