--- a/frontend/interfazdejuego.html
+++ b/frontend/interfazdejuego.html
@@ -30,6 +30,10 @@
           />
         </div>
         <div id="players-area"></div>
+        <div id="center-area">
+          <div id="discard-pile"></div>
+          <div id="deck"></div>
+        </div>
         <button class="uno-button">¡UNO!</button>
       </div>
 
