Sin form de jugadores

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,11 +16,11 @@
     <div id="welcome-screen">
       <img src="Assets/UNO_Logo.svg.png" alt="UNO Logo" class="uno-logo">
       <h1>Web Edition</h1>
-      <button onclick="openModalJugadores()" class="start-button">JUGAR</button>
+      <button class="start-button" onclick="goToGame()">JUGAR</button>
       <button class="rules-button" onclick="openModal()">REGLAS</button>
     </div>
 
-    <div id="modal-jugadores" class="modal">
+    <!-- <div id="modal-jugadores" class="modal">
       <div class="modal-content-jugadores">
         <span class="close" onclick="closeModal()">&times;</span>
         <h2>Elige el número de jugadores:</h2>
@@ -33,7 +33,7 @@
           <button id="modal-jugadores-aceptar" onclick="goToGame()">Aceptar</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="modal-reglas" class="modal">
       <div class="modal-contentrules">
