NOTIFICACIONES AHORA SI

--- a/frontend/interfazdejuego.html
+++ b/frontend/interfazdejuego.html
@@ -32,6 +32,7 @@
         <div id="players-area"></div>
         <button class="uno-button">¡UNO!</button>
       </div>
+      <div id="notification" class="hidden"></div>
 
       <div id="color-choice-modal" class="modal hidden">
         <div class="modal-content">
