basta por favor

--- a/frontend/interfazdejuego.html
+++ b/frontend/interfazdejuego.html
@@ -22,15 +22,17 @@
             alt="UNO Logo"
             class="uno-logo-juego"
           />
-          <img
+          <!-- <img
             src="Assets/volver.png"
             alt="Volver al inicio"
             class="volver-button"
             onclick="window.location.href='index.html'"
-          />
+          /> -->
         </div>
         <div id="players-area"></div>
+        <div id="score-table"></div>
         <button class="uno-button">¡UNO!</button>
+        <button class="restart-button">Reiniciar Partida</button>
       </div>
       <div id="notification" class="hidden"></div>
 
